--- a/arch/arm/boot/dts/armstonea9r3q.dts
+++ b/arch/arm/boot/dts/armstonea9r3q.dts
@@ -9,7 +9,7 @@
 /dts-v1/;
 
 /* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
-#define CONFIG_ARMSTONEA9R3_BOARD_REVISION	200
+#define CONFIG_ARMSTONEA9_BOARD_REVISION	200
 
 #define DISPLAY_NONE	0	/* No display on this port */
 #define DISPLAY_LCD	1	/* LCD via RGB adapter */
@@ -39,13 +39,13 @@
  * use /dev/fb4 and MXCFB3 will use /dev/fb5. If you want to restrict the
  * display output to one IPU (i.MX6 Dual/Quad has two IPUs), for example for
  * energy saving reasons, you must not use more than two displays and you must
- * set CONFIG_ARMSTONEA9R3_USE_ONE_IPU below. Then only MXCFB0 will get a video
+ * set CONFIG_ARMSTONEA9_USE_ONE_IPU below. Then only MXCFB0 will get a video
  * overlay and uses /dev/fb0 and /dev/fb1, and MXCFB1 will only use /dev/fb2.
  */
-#define CONFIG_ARMSTONEA9R3_MXCFB0	DISPLAY_LCD
-#define CONFIG_ARMSTONEA9R3_MXCFB1	DISPLAY_NONE
-#define CONFIG_ARMSTONEA9R3_MXCFB2	DISPLAY_NONE
-#define CONFIG_ARMSTONEA9R3_MXCFB3	DISPLAY_NONE
+#define CONFIG_ARMSTONEA9_MXCFB0	DISPLAY_LCD
+#define CONFIG_ARMSTONEA9_MXCFB1	DISPLAY_NONE
+#define CONFIG_ARMSTONEA9_MXCFB2	DISPLAY_NONE
+#define CONFIG_ARMSTONEA9_MXCFB3	DISPLAY_NONE
 
 /*
  * Define this if you only want to use one IPU. This means that you can use
@@ -54,28 +54,28 @@
  * displays with a video overlay each, then you need to use both IPUs of the
  * i.MX6 Dual/Quad CPU.
  */
-//#define CONFIG_ARMSTONEA9R3_USE_ONE_IPU
+//#define CONFIG_ARMSTONEA9_USE_ONE_IPU
 
 /*
  * Configure LCD settings here (ignored if LCD is not used);
  * see drivers/video/fbdev/mxc/mxc_lcdif.c for possible LCD mode strings
  */
-#define CONFIG_ARMSTONEA9R3_LCD_BPP	32
-#define CONFIG_ARMSTONEA9R3_LCD_PIX_FMT	"RGB666"
-#define CONFIG_ARMSTONEA9R3_LCD_MODE_STR	"LCD-ET070080"
+#define CONFIG_ARMSTONEA9_LCD_BPP	32
+#define CONFIG_ARMSTONEA9_LCD_PIX_FMT	"RGB666"
+#define CONFIG_ARMSTONEA9_LCD_MODE_STR	"LCD-ET070080"
 
 /*
  * Configure BT656 settings here (ignored if BT656 is not used);
  * see drivers/video/fbdev/mxc/mxc_bt656.c for possible mode strings
  */
-#define CONFIG_ARMSTONEA9R3_BT656_BPP	32
-#define CONFIG_ARMSTONEA9R3_BT656_PIX_FMT	"BT656"
-#define CONFIG_ARMSTONEA9R3_BT656_MODE_STR	"BT656-PAL"
+#define CONFIG_ARMSTONEA9_BT656_BPP	32
+#define CONFIG_ARMSTONEA9_BT656_PIX_FMT	"BT656"
+#define CONFIG_ARMSTONEA9_BT656_MODE_STR	"BT656-PAL"
 
 /* Configure HDMI settings here (ignored if HDMI is not used) */
-#define CONFIG_ARMSTONEA9R3_HDMI_BPP	32
-#define CONFIG_ARMSTONEA9R3_HDMI_PIX_FMT	"RGB24"
-#define CONFIG_ARMSTONEA9R3_HDMI_MODE_STR	"1920x1080M@60"
+#define CONFIG_ARMSTONEA9_HDMI_BPP	32
+#define CONFIG_ARMSTONEA9_HDMI_PIX_FMT	"RGB24"
+#define CONFIG_ARMSTONEA9_HDMI_MODE_STR	"1920x1080M@60"
 
 /*
  * F&S has changed the default LVDS display. To use the previous settings
@@ -93,11 +93,11 @@
  *            all other data bits on all four differential data pairs
  */
 #ifndef DISPLAY_LVDS_CHIMEI
-#define CONFIG_ARMSTONEA9R3_LVDS0_BPP	32
-#define CONFIG_ARMSTONEA9R3_LVDS0_PIX_FMT	"RGB24"
-#define CONFIG_ARMSTONEA9R3_LVDS0_DATA_WIDTH	24
-#define CONFIG_ARMSTONEA9R3_LVDS0_MAPPING	"spwg"
-#define CONFIG_ARMSTONEA9R3_LVDS0_TIMING \
+#define CONFIG_ARMSTONEA9_LVDS0_BPP	32
+#define CONFIG_ARMSTONEA9_LVDS0_PIX_FMT	"RGB24"
+#define CONFIG_ARMSTONEA9_LVDS0_DATA_WIDTH	24
+#define CONFIG_ARMSTONEA9_LVDS0_MAPPING	"spwg"
+#define CONFIG_ARMSTONEA9_LVDS0_TIMING \
 wvga {					\
 	clock-frequency = <33300000>;	\
 	hactive = <800>;		\
@@ -114,11 +114,11 @@ wvga {					\
 	pixelclk-active = <0>;		\
 }
 #else
-#define CONFIG_ARMSTONEA9R3_LVDS0_BPP	32
-#define CONFIG_ARMSTONEA9R3_LVDS0_PIX_FMT	"RGB666"
-#define CONFIG_ARMSTONEA9R3_LVDS0_DATA_WIDTH	18
-#define CONFIG_ARMSTONEA9R3_LVDS0_MAPPING	"spwg"
-#define CONFIG_ARMSTONEA9R3_LVDS0_TIMING \
+#define CONFIG_ARMSTONEA9_LVDS0_BPP	32
+#define CONFIG_ARMSTONEA9_LVDS0_PIX_FMT	"RGB666"
+#define CONFIG_ARMSTONEA9_LVDS0_DATA_WIDTH	18
+#define CONFIG_ARMSTONEA9_LVDS0_MAPPING	"spwg"
+#define CONFIG_ARMSTONEA9_LVDS0_TIMING \
 wvga {					\
 	clock-frequency = <33500000>;	\
 	hactive = <800>;		\
@@ -141,11 +141,11 @@ wvga {					\
  * For mapping value see above.
  */
 #ifndef DISPLAY_LVDS_CHIMEI
-#define CONFIG_ARMSTONEA9R3_LVDS1_BPP	32
-#define CONFIG_ARMSTONEA9R3_LVDS1_PIX_FMT	"RGB24"
-#define CONFIG_ARMSTONEA9R3_LVDS1_DATA_WIDTH	24
-#define CONFIG_ARMSTONEA9R3_LVDS1_MAPPING	"spwg"
-#define CONFIG_ARMSTONEA9R3_LVDS1_TIMING \
+#define CONFIG_ARMSTONEA9_LVDS1_BPP	32
+#define CONFIG_ARMSTONEA9_LVDS1_PIX_FMT	"RGB24"
+#define CONFIG_ARMSTONEA9_LVDS1_DATA_WIDTH	24
+#define CONFIG_ARMSTONEA9_LVDS1_MAPPING	"spwg"
+#define CONFIG_ARMSTONEA9_LVDS1_TIMING \
 wvga {					\
 	clock-frequency = <33300000>;	\
 	hactive = <800>;		\
@@ -162,11 +162,11 @@ wvga {					\
 	pixelclk-active = <0>;		\
 }
 #else
-#define CONFIG_ARMSTONEA9R3_LVDS1_BPP	32
-#define CONFIG_ARMSTONEA9R3_LVDS1_PIX_FMT	"RGB666"
-#define CONFIG_ARMSTONEA9R3_LVDS1_DATA_WIDTH	18
-#define CONFIG_ARMSTONEA9R3_LVDS1_MAPPING	"spwg"
-#define CONFIG_ARMSTONEA9R3_LVDS1_TIMING \
+#define CONFIG_ARMSTONEA9_LVDS1_BPP	32
+#define CONFIG_ARMSTONEA9_LVDS1_PIX_FMT	"RGB666"
+#define CONFIG_ARMSTONEA9_LVDS1_DATA_WIDTH	18
+#define CONFIG_ARMSTONEA9_LVDS1_MAPPING	"spwg"
+#define CONFIG_ARMSTONEA9_LVDS1_TIMING \
 wvga {					\
 	clock-frequency = <33500000>;	\
 	hactive = <800>;		\
@@ -192,10 +192,10 @@ wvga {					\
  * other to PLL5. If you have activated the displays in U-Boot already and want
  * to keep these settings in Linux, de-activate all four lines.
  */
-//#define CONFIG_ARMSTONEA9R3_LVDS0_CLK  IMX6QDL_CLK_PLL2_PFD0_352M
-#define CONFIG_ARMSTONEA9R3_LVDS0_CLK  IMX6QDL_CLK_PLL5_VIDEO_DIV
-//#define CONFIG_ARMSTONEA9R3_LVDS1_CLK  IMX6QDL_CLK_PLL2_PFD0_352M
-#define CONFIG_ARMSTONEA9R3_LVDS1_CLK  IMX6QDL_CLK_PLL5_VIDEO_DIV
+//#define CONFIG_ARMSTONEA9_LVDS0_CLK  IMX6QDL_CLK_PLL2_PFD0_352M
+#define CONFIG_ARMSTONEA9_LVDS0_CLK  IMX6QDL_CLK_PLL5_VIDEO_DIV
+//#define CONFIG_ARMSTONEA9_LVDS1_CLK  IMX6QDL_CLK_PLL2_PFD0_352M
+#define CONFIG_ARMSTONEA9_LVDS1_CLK  IMX6QDL_CLK_PLL5_VIDEO_DIV
 
 /*
  * Define this for a two-channel display, i.e. one display, one framebuffer,
@@ -203,7 +203,7 @@ wvga {					\
  * other channel. Only define either DISPLAY_LVDS0 or DISPLAY_LVDS1 in this
  * case, using the full display resolution.
  */
-//#define CONFIG_ARMSTONEA9R3_LVDS_SPLIT_MODE
+//#define CONFIG_ARMSTONEA9_LVDS_SPLIT_MODE
 
 /*
  * Define this if you have two similar displays (same resolution and timings),
@@ -211,7 +211,7 @@ wvga {					\
  * on both displays simultaneously (cloned). Only define either DISPLAY_LVDS0
  * or DISPLAY_LVDS1 in this case, using the resolution of one of the displays.
  */
-//#define CONFIG_ARMSTONEA9R3_LVDS_DUAL_MODE
+//#define CONFIG_ARMSTONEA9_LVDS_DUAL_MODE
 
 /*
  * Configure touch screen:
@@ -225,28 +225,28 @@ wvga {					\
  *
  * Select none if you do not need touch support.
  */
-#define CONFIG_ARMSTONEA9R3_4WTOUCH_SX8655_RGBADAPTER
-//#define CONFIG_ARMSTONEA9R3_4WTOUCH_TSC2004_RGBADAPTER
-//#define CONFIG_ARMSTONEA9R3_4WTOUCH_SX8655
-//#define CONFIG_ARMSTONEA9R3_CAPTOUCH_MXT224
-//#define CONFIG_ARMSTONEA9R3_CAPTOUCH_FT5x06
-//#define CONFIG_ARMSTONEA9R3_CAPTOUCH_SITRONIX
-//#define CONFIG_ARMSTONEA9R3_CAPTOUCH_ILITEK
+//#define CONFIG_ARMSTONEA9_4WTOUCH_SX8655_RGBADAPTER
+//#define CONFIG_ARMSTONEA9_4WTOUCH_TSC2004_RGBADAPTER
+//#define CONFIG_ARMSTONEA9_4WTOUCH_SX8655
+//#define CONFIG_ARMSTONEA9_CAPTOUCH_MXT224
+//#define CONFIG_ARMSTONEA9_CAPTOUCH_FT5x06
+//#define CONFIG_ARMSTONEA9_CAPTOUCH_SITRONIX
+//#define CONFIG_ARMSTONEA9_CAPTOUCH_ILITEK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
-#define CONFIG_ARMSTONEA9R3_CMA_SIZE	0x14000000
+#define CONFIG_ARMSTONEA9_CMA_SIZE	0x14000000
 
 /* NAND */
-#define CONFIG_ARMSTONEA9R3_NAND
+#define CONFIG_ARMSTONEA9_NAND
 
 /* AUDIO */
-#define CONFIG_ARMSTONEA9R3_SGTL5000_AUDIO
+#define CONFIG_ARMSTONEA9_SGTL5000_AUDIO
 
 /* Camera on parallel CSI interface */
-//#define CONFIG_ARMSTONEA9R3_PARALLEL_CAMERA
+//#define CONFIG_ARMSTONEA9_PARALLEL_CAMERA
 
 /* SD-CARD - SD_A is micro SD */
-#define CONFIG_ARMSTONEA9R3_SD_A
+#define CONFIG_ARMSTONEA9_SD_A
 
 /* PCIe */
 /* On PCIe wire PCIECLKN/P there are some missing terminating resistor
@@ -254,27 +254,27 @@ wvga {					\
  * corresponding adapter have these resistors or there must be a redesign
  * for armstone. The resistors can be found on efusA9.
  */
-//#define CONFIG_ARMSTONEA9R3_PCIE
+//#define CONFIG_ARMSTONEA9_PCIE
 
 /* SATA */
-#define CONFIG_ARMSTONEA9R3_SATA
+#define CONFIG_ARMSTONEA9_SATA
 
 /* I2C (I2C_C breaks armStone standard and is disabled by default) */
-#define CONFIG_ARMSTONEA9R3_I2C_A
-#define CONFIG_ARMSTONEA9R3_I2C_B
-//#define CONFIG_ARMSTONEA9R3_I2C_C
+#define CONFIG_ARMSTONEA9_I2C_A
+#define CONFIG_ARMSTONEA9_I2C_B
+//#define CONFIG_ARMSTONEA9_I2C_C
 
 /* SPI */
-#define CONFIG_ARMSTONEA9R3_SPI_A
+#define CONFIG_ARMSTONEA9_SPI_A
 
 /* UART */
-#define CONFIG_ARMSTONEA9R3_UART_A
-#define CONFIG_ARMSTONEA9R3_UART_A_RTSCTS
-#define CONFIG_ARMSTONEA9R3_UART_B
-#define CONFIG_ARMSTONEA9R3_UART_C
+#define CONFIG_ARMSTONEA9_UART_A
+#define CONFIG_ARMSTONEA9_UART_A_RTSCTS
+#define CONFIG_ARMSTONEA9_UART_B
+#define CONFIG_ARMSTONEA9_UART_C
 
 #include "imx6q.dtsi"
-#include "armstonea9r3qdl.dtsi"
+#include "armstonea9qdl.dtsi"
 
 / {
 	model = "F&S i.MX6 Dual/Quad armStoneA9r3";
@@ -286,8 +286,42 @@ wvga {					\
 };
 
 /* i.MX6 Dual and Quad can have SATA */
-#ifdef CONFIG_ARMSTONEA9R3_SATA
+#ifdef CONFIG_ARMSTONEA9_SATA
 &sata{
 	status = "okay";
 };
 #endif
+
+&fec {
+	mdio {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		ethphy0: ethernet-phy@4 {
+			compatible = "ethernet-phy-ieee802.3-c22";
+			reg = <4>;
+			/* Set the maximum link speed if required */
+			//max-speed = <100>;
+			rtl821x,aldps-enable;
+			rtl821x,ssc-rxc-enable;
+			rtl821x,ssc-sysclk-enable;
+			rtl821x,ssc-clkout-enable;
+			rtl821x,led-link = <0>;
+			rtl821x,led-act = <1>;
+		};
+	};
+};
+
+&iomuxc {
+	imx6qdl-armstonea9 {
+#ifdef CONFIG_ARMSTONEA9_I2C_A
+		/* I2C_A: Feature Connector (SKIT) */
+		pinctrl_i2c3_5: i2c3grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_3__I2C3_SCL		0x4001b8b1
+				MX6QDL_PAD_GPIO_6__I2C3_SDA		0x4001b8b1
+			>;
+		};
+#endif /* CONFIG_ARMSTONEA9_I2C_A */
+	};
+};
