--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -683,17 +683,6 @@
 	phy-supply = <&reg_vref_3v3>;
 	status = "okay";
 
-	mdio {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		ethphy0: ethernet-phy@4 {
-			compatible = "ethernet-phy-ieee802.3-c22";
-			reg = <4>;
-			/* Set the maximum link speed if required */
-			//max-speed = <100>;
-		};
-	};
 };
 
 /* CANRX1 Pin 63 & CANTX1 Pin 64 */
@@ -988,27 +977,6 @@
 	};
 #endif
 
-#ifdef CONFIG_ARMSTONEA9_4WTOUCH_TSC2004_RGBADAPTER
-	/* 4/5 wire analog resistive touch, on RGB LCD adapter */
-	tsc2004@4a {
-		compatible = "ti,tsc2004";
-		reg = <0x4a>;
-		vio-supply = <&reg_vref_3v3>;
-		interrupts-extended = <&gpio1 30 IRQ_TYPE_EDGE_FALLING>;
-		reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
-		touchscreen-fuzz-x = <4>;
-		touchscreen-fuzz-y = <7>;
-		touchscreen-fuzz-pressure = <20>;
-		touchscreen-size-x = <4096>;
-		touchscreen-size-y = <4096>;
-		touchscreen-max-pressure = <2048>;
-		touchscreen-inverted-y;
-		ti,x-plate-ohms = <280>;
-		ti,pre-charge-time = <4>;
-		ti,sense-time-sel = <3>;
-	};
-#endif
-
 #ifdef CONFIG_ARMSTONEA9_4WTOUCH_SX8655
 	/* 4/5 wire analog resistive touch on Touch Connector (I2C) */
 	sx8654@48 {
@@ -1085,7 +1053,7 @@
 &i2c_gpio {
 	sgtl5000: sgtl5000@a {
 		compatible = "fsl,sgtl5000";
-		reg = <0x0a>;
+		reg = <0xa>;
 		mono2both;
 		lrclk-strength = <3>;
 		clocks = <&clks IMX6QDL_CLK_CKO>;
@@ -1592,16 +1560,6 @@
 				MX6QDL_PAD_ENET_CRS_DV__GPIO1_IO25	0x4001b0a8
 			>;
 		};
-
-#ifdef CONFIG_ARMSTONEA9_I2C_A
-		/* I2C_A: Feature Connector (SKIT) */
-		pinctrl_i2c3_5: i2c3grp-1 {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_3__I2C3_SCL		0x4001b8b1
-				MX6QDL_PAD_GPIO_16__I2C3_SDA		0x4001b8b1
-			>;
-		};
-#endif /* CONFIG_ARMSTONEA9_I2C_A */
 
 #ifdef CONFIG_ARMSTONEA9_I2C_B
 		/* I2C2 as I2C port B  (DataFlash, PMIC, RTC) */
