--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -174,6 +174,7 @@
 		nand = &gpmi;
 	};
 
+
 	memory {
 		reg = <0x10000000 0x40000000>;
 	};
@@ -313,7 +314,6 @@
 	/* F&S board information */
 	bdinfo: bdinfo {
 		compatible = "bdinfo";
-		board_name = "efusa9";
 		ecc_strength = "8";
 	};
 #ifdef CONFIG_EFUSA9_SGTL5000_AUDIO
@@ -740,18 +740,6 @@
 	phy-handle = <&ethphy0>;
 	phy-supply = <&reg_vref_3v3>;
 	status = "okay";
-
-	mdio {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		ethphy0: ethernet-phy@4 {
-			compatible = "ethernet-phy-ieee802.3-c22";
-			reg = <4>;
-			/* Set the maximum link speed if required */
-			//max-speed = <100>;
-		};
-	};
 };
 
 &flexcan1 {
@@ -970,27 +958,6 @@
 		 */
 		touchscreen-inverted-x;
 		touchscreen-inverted-y;
-	};
-#endif
-
-#ifdef CONFIG_EFUSA9_4WTOUCH_TSC2004_RGBADAPTER
-	/* 4/5 wire analog resistive touch on RGB-Adapter */
-	tsc2004@4a {
-		compatible = "ti,tsc2004";
-		reg = <0x4a>;
-		vio-supply = <&reg_vref_3v3>;
-		interrupts-extended = <&gpio1 30 IRQ_TYPE_EDGE_FALLING>;
-		reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
-		touchscreen-fuzz-x = <4>;
-		touchscreen-fuzz-y = <7>;
-		touchscreen-fuzz-pressure = <20>;
-		touchscreen-size-x = <4096>;
-		touchscreen-size-y = <4096>;
-		touchscreen-max-pressure = <2048>;
-		touchscreen-inverted-y;
-		ti,x-plate-ohms = <280>;
-		ti,pre-charge-time = <4>;
-		ti,sense-time-sel = <3>;
 	};
 #endif
 
@@ -1416,7 +1383,8 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pcie>;
 	power-on-gpio = <&gpio6 16 GPIO_ACTIVE_LOW>;
-#if (CONFIG_EFUSA9_BOARD_REVISION >= 120)
+#if (CONFIG_EFUSA9_BOARD_REVISION >= 120) \
+	|| defined(CONFIG_EFUSA9R2)
 	reset-gpio = <&gpio6 14 GPIO_ACTIVE_LOW>;
 #else
 	reset-gpio = <&gpio6 15 GPIO_ACTIVE_LOW>;
@@ -1435,7 +1403,8 @@
 			fsl,pins = <
 				/* Audio clock */
 				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x130b0
-#if (CONFIG_EFUSA9_BOARD_REVISION >= 121)
+#if (CONFIG_EFUSA9_BOARD_REVISION >= 121) \
+	|| defined(CONFIG_EFUSA9R2)
 				/* Camera clock 24MHz */
 				MX6QDL_PAD_NANDF_CS2__CCM_CLKO2		0x130b0
 				/* 5V_3V3n for VLCD */
@@ -1848,7 +1817,8 @@
 		pinctrl_pcie: pciegrp {
 			fsl,pins = <
 				/* PCIe-RST */
-#if (CONFIG_EFUSA9_BOARD_REVISION >= 120)
+#if (CONFIG_EFUSA9_BOARD_REVISION >= 120) \
+	|| defined(CONFIG_EFUSA9R2)
 				MX6QDL_PAD_NANDF_CS1__GPIO6_IO14	0x1b0b0
 #else
 				MX6QDL_PAD_NANDF_CS2__GPIO6_IO15	0x1b0b0
