--- a/arch/arm/boot/dts/efusa9r2q.dts
+++ b/arch/arm/boot/dts/efusa9r2q.dts
@@ -9,7 +9,8 @@
 /dts-v1/;
 
 /* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
-#define CONFIG_EFUSA9R2_BOARD_REVISION	110
+#define CONFIG_EFUSA9_BOARD_REVISION	100
+#define CONFIG_EFUSA9R2
 
 #define DISPLAY_NONE	0	/* No display on this port */
 #define DISPLAY_LCD	1	/* LCD via RGB adapter */
@@ -39,13 +40,13 @@
  * use /dev/fb4 and MXCFB3 will use /dev/fb5. If you want to restrict the
  * display output to one IPU (i.MX6 Dual/Quad has two IPUs), for example for
  * energy saving reasons, you must not use more than two displays and you must
- * set CONFIG_EFUSA9R2_USE_ONE_IPU below. Then only MXCFB0 will get a video
+ * set CONFIG_EFUSA9_USE_ONE_IPU below. Then only MXCFB0 will get a video
  * overlay and uses /dev/fb0 and /dev/fb1, and MXCFB1 will only use /dev/fb2.
  */
-#define CONFIG_EFUSA9R2_MXCFB0		DISPLAY_LCD
-#define CONFIG_EFUSA9R2_MXCFB1		DISPLAY_NONE
-#define CONFIG_EFUSA9R2_MXCFB2		DISPLAY_NONE
-#define CONFIG_EFUSA9R2_MXCFB3		DISPLAY_NONE
+#define CONFIG_EFUSA9_MXCFB0		DISPLAY_LCD
+#define CONFIG_EFUSA9_MXCFB1		DISPLAY_NONE
+#define CONFIG_EFUSA9_MXCFB2		DISPLAY_NONE
+#define CONFIG_EFUSA9_MXCFB3		DISPLAY_NONE
 
 /*
  * Define this if you only want to use one IPU. This means that you can use
@@ -54,28 +55,28 @@
  * displays with a video overlay each, then you need to use both IPUs of the
  * i.MX6 Dual/Quad CPU.
  */
-//#define CONFIG_EFUSA9R2_USE_ONE_IPU
+//#define CONFIG_EFUSA9_USE_ONE_IPU
 
 /*
  * Configure LCD settings here (ignored if LCD is not used);
  * see drivers/video/fbdev/mxc/mxc_lcdif.c for possible LCD mode strings
  */
-#define CONFIG_EFUSA9R2_LCD_BPP		32
-#define CONFIG_EFUSA9R2_LCD_PIX_FMT	"BGR666"
-#define CONFIG_EFUSA9R2_LCD_MODE_STR	"LCD-ET070080"
+#define CONFIG_EFUSA9_LCD_BPP		32
+#define CONFIG_EFUSA9_LCD_PIX_FMT	"BGR666"
+#define CONFIG_EFUSA9_LCD_MODE_STR	"LCD-ET070080"
 
 /*
  * Configure BT656 settings here (ignored if BT656 is not used);
  * see drivers/video/fbdev/mxc/mxc_bt656.c for possible mode strings
  */
-#define CONFIG_EFUSA9R2_BT656_BPP		32
-#define CONFIG_EFUSA9R2_BT656_PIX_FMT	"BT656"
-#define CONFIG_EFUSA9R2_BT656_MODE_STR	"BT656-PAL"
+#define CONFIG_EFUSA9_BT656_BPP		32
+#define CONFIG_EFUSA9_BT656_PIX_FMT	"BT656"
+#define CONFIG_EFUSA9_BT656_MODE_STR	"BT656-PAL"
 
 /* Configure HDMI settings here (ignored if HDMI is not used) */
-#define CONFIG_EFUSA9R2_HDMI_BPP		32
-#define CONFIG_EFUSA9R2_HDMI_PIX_FMT	"RGB24"
-#define CONFIG_EFUSA9R2_HDMI_MODE_STR	"1920x1080M@60"
+#define CONFIG_EFUSA9_HDMI_BPP		32
+#define CONFIG_EFUSA9_HDMI_PIX_FMT	"RGB24"
+#define CONFIG_EFUSA9_HDMI_MODE_STR	"1920x1080M@60"
 
 /*
  * F&S has changed the default LVDS display. To use the previous settings
@@ -93,11 +94,11 @@
  *            all other data bits on all four differential data pairs
  */
 #ifndef DISPLAY_LVDS_CHIMEI
-#define CONFIG_EFUSA9R2_LVDS0_BPP		32
-#define CONFIG_EFUSA9R2_LVDS0_PIX_FMT	"RGB24"
-#define CONFIG_EFUSA9R2_LVDS0_DATA_WIDTH	24
-#define CONFIG_EFUSA9R2_LVDS0_MAPPING	"spwg"
-#define CONFIG_EFUSA9R2_LVDS0_TIMING \
+#define CONFIG_EFUSA9_LVDS0_BPP		32
+#define CONFIG_EFUSA9_LVDS0_PIX_FMT	"RGB24"
+#define CONFIG_EFUSA9_LVDS0_DATA_WIDTH	24
+#define CONFIG_EFUSA9_LVDS0_MAPPING	"spwg"
+#define CONFIG_EFUSA9_LVDS0_TIMING \
 wvga {					\
 	clock-frequency = <33300000>;	\
 	hactive = <800>;		\
@@ -114,11 +115,11 @@ wvga {					\
 	pixelclk-active = <0>;		\
 }
 #else
-#define CONFIG_EFUSA9R2_LVDS0_BPP		32
-#define CONFIG_EFUSA9R2_LVDS0_PIX_FMT	"RGB666"
-#define CONFIG_EFUSA9R2_LVDS0_DATA_WIDTH	18
-#define CONFIG_EFUSA9R2_LVDS0_MAPPING	"spwg"
-#define CONFIG_EFUSA9R2_LVDS0_TIMING \
+#define CONFIG_EFUSA9_LVDS0_BPP		32
+#define CONFIG_EFUSA9_LVDS0_PIX_FMT	"RGB666"
+#define CONFIG_EFUSA9_LVDS0_DATA_WIDTH	18
+#define CONFIG_EFUSA9_LVDS0_MAPPING	"spwg"
+#define CONFIG_EFUSA9_LVDS0_TIMING \
 wvga {					\
 	clock-frequency = <33500000>;	\
 	hactive = <800>;		\
@@ -141,11 +142,11 @@ wvga {					\
  * For mapping value see above.
  */
 #ifndef DISPLAY_LVDS_CHIMEI
-#define CONFIG_EFUSA9R2_LVDS1_BPP		32
-#define CONFIG_EFUSA9R2_LVDS1_PIX_FMT	"RGB24"
-#define CONFIG_EFUSA9R2_LVDS1_DATA_WIDTH	24
-#define CONFIG_EFUSA9R2_LVDS1_MAPPING	"spwg"
-#define CONFIG_EFUSA9R2_LVDS1_TIMING \
+#define CONFIG_EFUSA9_LVDS1_BPP		32
+#define CONFIG_EFUSA9_LVDS1_PIX_FMT	"RGB24"
+#define CONFIG_EFUSA9_LVDS1_DATA_WIDTH	24
+#define CONFIG_EFUSA9_LVDS1_MAPPING	"spwg"
+#define CONFIG_EFUSA9_LVDS1_TIMING \
 wvga {					\
 	clock-frequency = <33300000>;	\
 	hactive = <800>;		\
@@ -162,11 +163,11 @@ wvga {					\
 	pixelclk-active = <0>;		\
 }
 #else
-#define CONFIG_EFUSA9R2_LVDS1_BPP		32
-#define CONFIG_EFUSA9R2_LVDS1_PIX_FMT	"RGB666"
-#define CONFIG_EFUSA9R2_LVDS1_DATA_WIDTH	18
-#define CONFIG_EFUSA9R2_LVDS1_MAPPING	"spwg"
-#define CONFIG_EFUSA9R2_LVDS1_TIMING \
+#define CONFIG_EFUSA9_LVDS1_BPP		32
+#define CONFIG_EFUSA9_LVDS1_PIX_FMT	"RGB666"
+#define CONFIG_EFUSA9_LVDS1_DATA_WIDTH	18
+#define CONFIG_EFUSA9_LVDS1_MAPPING	"spwg"
+#define CONFIG_EFUSA9_LVDS1_TIMING \
 wvga {					\
 	clock-frequency = <33500000>;	\
 	hactive = <800>;		\
@@ -192,10 +193,10 @@ wvga {					\
  * other to PLL5. If you have activated the displays in U-Boot already and want
  * to keep these settings in Linux, de-activate all four lines.
  */
-//#define CONFIG_EFUSA9R2_LVDS0_CLK  IMX6QDL_CLK_PLL2_PFD0_352M
-#define CONFIG_EFUSA9R2_LVDS0_CLK  IMX6QDL_CLK_PLL5_VIDEO_DIV
-//#define CONFIG_EFUSA9R2_LVDS1_CLK  IMX6QDL_CLK_PLL2_PFD0_352M
-#define CONFIG_EFUSA9R2_LVDS1_CLK  IMX6QDL_CLK_PLL5_VIDEO_DIV
+//#define CONFIG_EFUSA9_LVDS0_CLK  IMX6QDL_CLK_PLL2_PFD0_352M
+#define CONFIG_EFUSA9_LVDS0_CLK  IMX6QDL_CLK_PLL5_VIDEO_DIV
+//#define CONFIG_EFUSA9_LVDS1_CLK  IMX6QDL_CLK_PLL2_PFD0_352M
+#define CONFIG_EFUSA9_LVDS1_CLK  IMX6QDL_CLK_PLL5_VIDEO_DIV
 
 /*
  * Define this for a two-channel display, i.e. one display, one framebuffer,
@@ -203,7 +204,7 @@ wvga {					\
  * other channel. Only define either DISPLAY_LVDS0 or DISPLAY_LVDS1 in this
  * case, using the full display resolution.
  */
-//#define CONFIG_EFUSA9R2_LVDS_SPLIT_MODE
+//#define CONFIG_EFUSA9_LVDS_SPLIT_MODE
 
 /*
  * Define this if you have two similar displays (same resolution and timings),
@@ -211,7 +212,7 @@ wvga {					\
  * on both displays simultaneously (cloned). Only define either DISPLAY_LVDS0
  * or DISPLAY_LVDS1 in this case, using the resolution of one of the displays.
  */
-//#define CONFIG_EFUSA9R2_LVDS_DUAL_MODE
+//#define CONFIG_EFUSA9_LVDS_DUAL_MODE
 
 /*
  * Define this if your LVDS display requires 5V I/O logic voltage. Default is
@@ -219,7 +220,7 @@ wvga {					\
  * Remark: This setting requires board revision 1.21 or newer; older board
  * revisions only support 3.3V.
  */
-//#define CONFIG_EFUSA9R2_5V_LVDS
+//#define CONFIG_EFUSA9_5V_LVDS
 
 /*
  * Configure touch screen:
@@ -234,84 +235,84 @@ wvga {					\
  * On efusA9r2, all touches use the same interrupt line and I2C bus, so do not
  * select more than one entry! Select none if you do not need touch support.
  */
-//#define CONFIG_EFUSA9R2_4WTOUCH_SX8655_ONBOARD
-#define CONFIG_EFUSA9R2_4WTOUCH_SX8655_RGBADAPTER
-//#define CONFIG_EFUSA9R2_4WTOUCH_TSC2004_RGBADAPTER
-//#define CONFIG_EFUSA9R2_CAPTOUCH_MXT224
-//#define CONFIG_EFUSA9R2_CAPTOUCH_FT5x06
-//#define CONFIG_EFUSA9R2_CAPTOUCH_SITRONIX
-//#define CONFIG_EFUSA9R2_CAPTOUCH_ILITEK
+//#define CONFIG_EFUSA9_4WTOUCH_SX8655_ONBOARD
+#define CONFIG_EFUSA9_4WTOUCH_SX8655_RGBADAPTER
+//#define CONFIG_EFUSA9_4WTOUCH_TSC2004_RGBADAPTER
+//#define CONFIG_EFUSA9_CAPTOUCH_MXT224
+//#define CONFIG_EFUSA9_CAPTOUCH_FT5x06
+//#define CONFIG_EFUSA9_CAPTOUCH_SITRONIX
+//#define CONFIG_EFUSA9_CAPTOUCH_ILITEK
 
 /* CMA: Set 320 MB for Continuous Memory Allocator */
-#define CONFIG_EFUSA9R2_CMA_SIZE		0x14000000
+#define CONFIG_EFUSA9_CMA_SIZE		0x14000000
 
 /* NAND */
-#define CONFIG_EFUSA9R2_NAND
+#define CONFIG_EFUSA9_NAND
 
 /* USB OTG has over-current detection on OC pin */
-#define CONFIG_EFUSA9R2_HAVE_USB_OTG_OC
+#define CONFIG_EFUSA9_HAVE_USB_OTG_OC
 
 /* AUDIO */
-#define CONFIG_EFUSA9R2_SGTL5000_AUDIO
+#define CONFIG_EFUSA9_SGTL5000_AUDIO
 
 /* Camera connected */
-#define CONFIG_EFUSA9R2_CAMERA
+#define CONFIG_EFUSA9_CAMERA
 
 /* Camera on parallel CSI interface */
-//#define CONFIG_EFUSA9R2_PARALLEL_CAMERA
+//#define CONFIG_EFUSA9_PARALLEL_CAMERA
 
 /* Camera on serial MIPI CSI interface */
-#define CONFIG_EFUSA9R2_SERIAL_CAMERA
+#define CONFIG_EFUSA9_SERIAL_CAMERA
 
 /* In case of MIPI, select one of the following cameras */
-//#define CONFIG_EFUSA9R2_MIPI_CAMERA_OV564X
-#define CONFIG_EFUSA9R2_MIPI_CAMERA_ISL7998X
+//#define CONFIG_EFUSA9_MIPI_CAMERA_OV564X
+#define CONFIG_EFUSA9_MIPI_CAMERA_ISL7998X
 
 /*
  * SD_A - External SD port with Card Detect (CD) and Write Protect (WP)
  * On efus SKIT: external port is Micro SD card slot with CD but without WP
  */
-#define CONFIG_EFUSA9R2_SD_A
-#define CONFIG_EFUSA9R2_SD_A_CD
-//#define CONFIG_EFUSA9R2_SD_A_WP
+#define CONFIG_EFUSA9_SD_A
+#define CONFIG_EFUSA9_SD_A_CD
+//#define CONFIG_EFUSA9_SD_A_WP
 
 /*
  * SD_B - External SD port with Card Detect (CD) and Write Protect (WP)
  * On efus SKIT: external port is normal-sized SD card slot with CD and WP
  */
-#define CONFIG_EFUSA9R2_SD_B
-#define CONFIG_EFUSA9R2_SD_B_CD
-#define CONFIG_EFUSA9R2_SD_B_WP
+#define CONFIG_EFUSA9_SD_B
+#define CONFIG_EFUSA9_SD_B_CD
+#define CONFIG_EFUSA9_SD_B_WP
 
 /* SATA */
-#define CONFIG_EFUSA9R2_SATA
+#define CONFIG_EFUSA9_SATA
 
 /* EMMC */
-#define CONFIG_EFUSA9R2_EMMC
+#define CONFIG_EFUSA9_EMMC
 
 /* PCIe */
-//#define CONFIG_EFUSA9R2_PCIE
+#define CONFIG_EFUSA9_PCIE
 
 /* I2C */
-#define CONFIG_EFUSA9R2_I2C_A
-#define CONFIG_EFUSA9R2_I2C_B
-#define CONFIG_EFUSA9R2_I2C_C
+#define CONFIG_EFUSA9_I2C_A
+#define CONFIG_EFUSA9_I2C_B
+#define CONFIG_EFUSA9_I2C_C
 
 /* SPI */
-#define CONFIG_EFUSA9R2_SPI_A
-#define CONFIG_EFUSA9R2_SPI_B
+#define CONFIG_EFUSA9_SPI_A
+#define CONFIG_EFUSA9_SPI_B
 
 /* UART */
-#define CONFIG_EFUSA9R2_UART_A
-#define CONFIG_EFUSA9R2_UART_B
-#define CONFIG_EFUSA9R2_UART_B_RTSCTS
-#define CONFIG_EFUSA9R2_UART_C
-#define CONFIG_EFUSA9R2_UART_C_RTSCTS
-#define CONFIG_EFUSA9R2_UART_D
+#define CONFIG_EFUSA9_UART_A
+#define CONFIG_EFUSA9_UART_B
+#define CONFIG_EFUSA9_UART_B_RTSCTS
+#define CONFIG_EFUSA9_UART_C
+#define CONFIG_EFUSA9_UART_C_RTSCTS
+#define CONFIG_EFUSA9_UART_D
 
 
 #include "imx6q.dtsi"
-#include "efusa9r2qdl.dtsi"
+#include "efusa9qdl.dtsi"
 
 / {
 	model = "F&S i.MX6 Dual/Quad efusA9r2 module";
@@ -323,8 +324,28 @@ wvga {					\
 };
 
 /* i.MX6 Dual and Quad can have SATA */
-#ifdef CONFIG_EFUSA9R2_SATA
+#ifdef CONFIG_EFUSA9_SATA
 &sata{
 	status = "okay";
 };
 #endif
+
+&fec {
+	mdio {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		ethphy0: ethernet-phy@4 {
+			compatible = "ethernet-phy-ieee802.3-c22";
+			reg = <4>;
+			/* Set the maximum link speed if required */
+			//max-speed = <100>;
+			rtl821x,aldps-enable;
+			rtl821x,ssc-rxc-enable;
+			rtl821x,ssc-sysclk-enable;
+			rtl821x,ssc-clkout-enable;
+			rtl821x,led-link = <2>;
+			rtl821x,led-act = <1>;
+		};
+	};
+};
