--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -7,6 +7,7 @@
  */
 
 #include <dt-bindings/pwm/pwm.h>
+#include <fsversion.h>
 
 /*
  * When using one IPU, having LCD and LVDS0 at the same time is not possible,
@@ -315,6 +316,7 @@
 	bdinfo: bdinfo {
 		compatible = "bdinfo";
 		ecc_strength = "8";
+		dts_version = FS_LINUX_VERSION;
 	};
 #ifdef CONFIG_EFUSA9_SGTL5000_AUDIO
 	sound {
