Add ilitek and goodix touch driver to fsimx6(sx/ul)defconfigs
This driver is needed by the new LVDS default dispplay BT070 EE1010

--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -304,6 +304,7 @@ CONFIG_TOUCHSCREEN_SX8654=y
 CONFIG_TOUCHSCREEN_IMX6UL_TSC=y
 CONFIG_TOUCHSCREEN_TSC2004=y
 CONFIG_TOUCHSCREEN_ILITEK=y
+CONFIG_TOUCHSCREEN_GOODIX=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_IMX=y
