--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -314,6 +314,8 @@ CONFIG_TOUCHSCREEN_ST1633I=y
 CONFIG_TOUCHSCREEN_WM97XX=m
 CONFIG_TOUCHSCREEN_SX8654=y
 CONFIG_TOUCHSCREEN_TSC2004=y
+CONFIG_TOUCHSCREEN_ILITEK=y
+CONFIG_TOUCHSCREEN_GOODIX=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_IMX=y
