Fix qblissa9qdl.dtsi typo
There should only be one underscore

--- a/arch/arm/boot/dts/qblissa9qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9qdl.dtsi
@@ -68,7 +68,7 @@
 #define __LVDS0_PRIMARY__
 #elif (CONFIG_QBLISSA9_MXCFB1 == DISPLAY_LVDS1)
 #define __LVDS1_PRIMARY__
-#elif (CONFIG_QBLISSA9__MXCFB2 == DISPLAY_LVDS0)
+#elif (CONFIG_QBLISSA9_MXCFB2 == DISPLAY_LVDS0)
 #define __LVDS0_PRIMARY__
 #elif (CONFIG_QBLISSA9_MXCFB2 == DISPLAY_LVDS1)
 #define __LVDS1_PRIMARY__
