arm64:boot:dts:F+S: add fs-osm-sf-mx93 support

--- a/arch/arm64/boot/dts/F+S/picocoremx93.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx93.dtsi
@@ -20,7 +20,7 @@
 
 / {
 	model = "F+S PicoCoreMX93";
-	compatible = "fus,imx93-picocoremx8mp", "fsl,imx93";
+	compatible = "fus,imx93-picocoremx93", "fsl,imx93";
 
 	chosen {
 		bootargs = "console=ttyLP1,115200";
