--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -11,3 +11,6 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx93.dtb \
 			picocoremx93-BT070L1060CS0I1AD-A.dtb \
 			picocoremx93-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
 			picocoremx93-adp-lvds2lvds2-EE1010B1T-1CP.dtb
+
+dtb-$(CONFIG_ARCH_MXC) += fs-osm-sf-mx93-adp-osm-bb.dtb \
+						fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dtb \
