arm64:config:fsimx93_defconfig: add imx-ocotp-fsp-s400 as intern driver
generated defconfig with $(make savedefconfig)

this driver needs to be build internal.
it is used for eqos ethernet driver.

--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb.dts
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb.dts
@@ -18,6 +18,8 @@
     phy-handle = <&ethphy1>;
     status = "okay";
     mdio {
+        status = "okay";
+        
         /* Note: Broadcast address*/
 		ethphy1: rtl8211fdi@0 {
 			reg = <0>;
