dts:F+S:displays: use new compatible string for newvision panel

--- a/arch/arm64/boot/dts/F+S/displays/imx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtsi
@@ -58,7 +58,7 @@
 	status = "okay";
 	
 	panel@0 {
-        compatible = "eagleeyetech,ee0350et-2";
+        compatible = "newvision,nv3051d-ee0350et";
         reg = <0>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_dsi>;
